@@ -1,3 +1,7 @@
+2014-09-15 Marco Giammarini <m.giammarini@warcomeb.it>
+
+    * Iniziata l'implementazione del dialog dell'activity.
+
 2014-09-12 Marco Giammarini <m.giammarini@warcomeb.it>
 
     * Iniziata l'implementazione delle classi riguardanti la gestione delle attivita'.
